<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.profile.ProfileFragment">

        <ImageView
            android:id="@+id/head_bg"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:background="@drawable/bg_profile_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_personal"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/personal_img"
            app:layout_constraintBottom_toBottomOf="@+id/head_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_bg" />

        <ImageView
            android:id="@+id/img_edit_personal_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/img_personal"
            app:layout_constraintEnd_toStartOf="@+id/img_personal"
            app:layout_constraintStart_toStartOf="@+id/img_personal" />

        <TextView
            android:id="@+id/tv_profile_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/full_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/img_personal"
            app:layout_constraintStart_toEndOf="@+id/img_personal"
            app:layout_constraintStart_toStartOf="@+id/img_personal"
            app:layout_constraintTop_toBottomOf="@+id/img_personal" />

        <TextView
            android:id="@+id/tv_profile_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:lines="3"
            android:text="BIO"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_full_name" />

        <TextView
            android:id="@+id/living_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Living Place"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_bio"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile_bio" />

        <TextView
            android:id="@+id/tv_living_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Living Place"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            app:layout_constraintBottom_toBottomOf="@+id/living_place"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/living_place"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/living_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/state"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_bio"
            app:layout_constraintTop_toBottomOf="@+id/living_place" />

        <TextView
            android:id="@+id/tv_living_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gaza"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            app:layout_constraintBottom_toBottomOf="@+id/living_state"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/living_state"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/work"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_profile_bio"
            app:layout_constraintTop_toBottomOf="@+id/living_state" />

        <TextView
            android:id="@+id/tv_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            app:layout_constraintBottom_toBottomOf="@+id/work"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/work"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/phone"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/work"
            app:layout_constraintTop_toBottomOf="@+id/work" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0597080897"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            app:layout_constraintBottom_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/phone"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KareemAbuRejila@gmail.com"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            app:layout_constraintBottom_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/email"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/tv_chpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="#0055FF"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/password"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="OnClick" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchMaterial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_notifications"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:useMaterialThemeColors="true"
            android:textColor="@color/color_Primary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/padding_main"
            android:layout_marginEnd="@dimen/padding_main"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:layout_marginBottom="47dp"
            android:background="@color/grayStroke"
            app:layout_constraintTop_toBottomOf="@+id/switchMaterial" />

        <TextView
            android:id="@+id/my_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/my_gallery"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/color_Primary"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/my_gallery_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/title_more"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/HeadText"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/my_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/my_gallery"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_gallery_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_gallery"
            tools:itemCount="10"
            tools:listitem="@layout/item_latest" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>